--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -515,13 +515,20 @@ section {
 .entete {
   display: flex;
   flex-direction: row;
+  align-items: flex-start;
+  padding: 10vh 0;
+  justify-content: space-around;
 }
 .entete .menu__recherche .menu {
   display: flex;
   gap: 2em;
+  width: 100%;
+  background-color: black;
+  padding: 1em;
 }
 .entete .menu__recherche .menu a {
   color: rgb(54, 54, 252);
+  font-weight: 700;
 }
 .entete .menu__recherche .menu a:hover {
   text-decoration: underline;
