--- a/app/sass/composant/_entete.scss
+++ b/app/sass/composant/_entete.scss
@@ -1,25 +1,29 @@
-$accentColor: rgb(54, 54, 252);
+$accentColor: rgb(218 49 49);
+$bgColor: beige;
 
-.entete{
+@mixin flexCenter($justify, $direction){
     display: flex;
     align-items: center;
+    justify-content: $justify;
+    flex-direction: $direction;
+}
+
+.entete{
+    @include flexCenter(flex-start, column);
     gap: 10vh;
-    justify-content: flex-start;
+    background-color: $bgColor;
     .logo{
         width: 250px;
     }
     .menu__recherche{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        @include flexCenter(flex-start, column);
         gap: 2em;
         .menu{
             display: flex;
             order: 1;
             gap: 2em;
-            width: 100%;
             padding: 1em;
+            width: 100%;
             a{
                 color: $accentColor;
                 font-weight: 700;
@@ -30,8 +34,7 @@ $accentColor: rgb(54, 54, 252);
             }
         }
         .recherche label{
-            display: flex;
-            align-items: center;
+            @include flexCenter(flex-start, row);
             gap: 0.75em;
             input{
                 border-top: none;
@@ -39,6 +42,7 @@ $accentColor: rgb(54, 54, 252);
                 border-right: none;
                 border-bottom: 2px solid $accentColor;
                 padding: 0.5em 0.75em;
+                background-color: $bgColor;
             }
         }
         form{
