--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -81,7 +81,8 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -588,4 +589,25 @@ section {
 .entete .menu__recherche .burgerBox {
   order: 2;
   display: flex;
+}
+
+.tableau__titre {
+  font-weight: bold;
+  color: #ffffe8;
+  letter-spacing: 3px;
+}
+
+.tableau {
+  background-color: #ffffe8;
+  width: 80%;
+  border-collapse: collapse;
+}
+.tableau th, .tableau td {
+  padding: 10px;
+  text-align: center;
+  border: 1px solid black;
+}
+.tableau th {
+  background-color: rgb(56, 182, 255);
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
