--- a/app/sass/style.css
+++ b/app/sass/style.css
@@ -617,10 +617,20 @@ section {
   grid-template-columns: repeat(3, 1fr);
 }
 .grid img {
-  width: 100%;
+  max-width: 100%;
+  transform: scale(0.9);
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.3s;
+}
+.grid img:hover {
+  max-width: 100%;
+  transform: scale(1);
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.3s;
+  cursor: pointer;
 }
 .grid picture {
-  width: 200px;
+  width: 300px;
 }
 
 #galerie {
