--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -9,6 +9,7 @@ Author URI: https://github.com/eddytuto
 /* -------------------------------------------- normalize */
 @import "normalize/normalize";
 @import "normalize/box-sizing";
+@import "composant/mixin";
 
 /* --------------------------------------------- base */
 @import "base/heading";
@@ -19,6 +20,7 @@ Author URI: https://github.com/eddytuto
 
 
 @import "composant/entete";
+@import "composant/inscription";
 
 
 @import "composant/tableau";
