pousser une image

--- a/app/sass/layout/_layout.scss
+++ b/app/sass/layout/_layout.scss
@@ -17,9 +17,9 @@ section {
   min-height: 100vh;
 }
 
-#accueil {
-  background-color: aquamarine;
-}
+// #accueil {
+//   background-color: aquamarine;
+// }
 #inscription {
   background-color: rgb(238, 234, 16);
 }
