--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -20,6 +20,8 @@ Author URI: https://github.com/eddytuto
 
 @import "composant/entete";
 
+@import "composant/accueil";
+
 
 @import "composant/tableau";
 
