--- a/app/sass/layout/_layout.scss
+++ b/app/sass/layout/_layout.scss
@@ -18,7 +18,8 @@ section {
 }
 
 #accueil {
-  background-color: aquamarine;
+  background-image: url(../../../app/img/git-pic.webp);
+  background-repeat: round;
 }
 #inscription {
   background-color: rgb(238, 234, 16);
