ajout du footer

--- a/app/sass/composant/_accueil.scss
+++ b/app/sass/composant/_accueil.scss
@@ -1,4 +1,5 @@
-#accueil {
-    background-image: url(../../../app/img/git-pic.webp);
-}
+.primary-header {
+    background-image: url(../../../app/img/git_pic.webp);
+    background-repeat: round;
+  }
 
