--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -28,3 +28,5 @@ Author URI: https://github.com/eddytuto
 @import "composant/tableau";
 
 @import "composant/gallery";
+
+@import "composant/footer";
